Updating information link in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="icon-a" href="#">AB</a>
           </div>
           <div class="info">
-            <a class="info-a" href="info.html">Information</a>
+            <a class="info-a" href="#">Information</a>
           </div>
         </div>
       </header>
